# PyAdoc

./: .gitignore  README.md  pyproject.toml  setup.py
pyadoc/: __init__.py  core.py  main.py
