[project]
name = "pyadoc"
version = "0.1.0"
description = "Extract all docstrings from a Python directory into an .adoc file"
readme = "README.md"
authors = [
    { name = "CFabien00", email = "fabien.loisirs@gmail.com" }
]
license = { text = "MIT" }
requires-python = ">=3.10"
dependencies = []

[project.scripts]
pyadoc = "pyadoc.main:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"